--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.28.9",
     "@types/node": "20.12.2",
     "@types/react": "18.2.73",
     "@types/react-dom": "18.2.23",
+    "@web3modal/wagmi": "^4.1.3",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.4",
     "next": "14.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.4.3"
+    "typescript": "5.4.3",
+    "viem": "^2.9.5",
+    "wagmi": "^2.5.16"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.3"
   }
 }
