--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@types/react": "18.2.73",
     "@types/react-dom": "18.2.23",
     "@web3modal/wagmi": "^4.1.3",
+    "encoding": "^0.1.13",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.4",
     "next": "14.1.4",
+    "pino": "^8.19.0",
+    "pino-pretty": "^11.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.4.3",
+    "typewind": "^0.1.5",
     "viem": "^2.9.5",
     "wagmi": "^2.5.16"
   },
